--- a/package.json
+++ b/package.json
@@ -6,22 +6,30 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prisma-migrate": "npx prisma migrate dev"
   },
   "dependencies": {
+    "@auth/core": "0.18.1",
+    "@auth/prisma-adapter": "1.0.6",
+    "@nextui-org/react": "^2.2.10",
+    "@prisma/client": "^5.11.0",
+    "framer-motion": "^11.0.12",
+    "next": "14.1.3",
+    "next-auth": "5.0.0-beta.3",
+    "prisma": "^5.11.0",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.1.3"
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.1.3",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.3"
+    "typescript": "^5"
   }
 }
